--- a/windows/CoinFlip/mainscene.ui
+++ b/windows/CoinFlip/mainscene.ui
@@ -25,7 +25,7 @@
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
-     <string>开始</string>
+     <string>选项</string>
     </property>
     <addaction name="actionQuit"/>
    </widget>
